game_server/err
[0m[0m[1m[32m   Compiling[0m game-server v0.1.0 (/home/jan/projects/DiscoBot/game_server)
[0m[1m[38;5;9merror[E0277][0m[0m[1m: the trait bound `(): futures::future::Future` is not satisfied[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:32:24[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m32[0m[0m [0m[0m[1m[38;5;12m| [0m[0m        hyper::rt::run(hyper::rt::lazy(|| {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                       [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mthe trait `futures::future::Future` is not implemented for `()`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required because of the requirements on the impl of `futures::future::IntoFuture` for `()`[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required by `futures::future::lazy::lazy`[0m

[0m[1m[38;5;9merror[E0599][0m[0m[1m: no method named `wait` found for type `std::result::Result<futures::future::map_err::MapErr<futures::future::map::Map<hyper::client::ResponseFuture, [closure@src/backend_connection.rs:54:34: 54:68]>, [closure@src/backend_connection.rs:55:38: 55:73]>, http::uri::InvalidUri>` in the current scope[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:56:24[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m56[0m[0m [0m[0m[1m[38;5;12m| [0m[0m                    }).wait();[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                       [0m[0m[1m[38;5;9m^^^^[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: the method `wait` exists but the following trait bounds were not satisfied:[0m
[0m           `&mut std::result::Result<futures::future::map_err::MapErr<futures::future::map::Map<hyper::client::ResponseFuture, [closure@src/backend_connection.rs:54:34: 54:68]>, [closure@src/backend_connection.rs:55:38: 55:73]>, http::uri::InvalidUri> : futures::future::Future`[0m

[0m[1m[38;5;9merror[E0308][0m[0m[1m: mismatched types[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:58:17[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m58[0m[0m [0m[0m[1m[38;5;12m| [0m[0m                res[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                [0m[0m[1m[38;5;9m^^^[0m[0m [0m[0m[1m[38;5;9mexpected (), found enum `std::result::Result`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: expected type `[0m[0m[1m()[0m[0m`[0m
[0m              found type `[0m[0m[1mstd::result::Result<http::response::Response<hyper::body::body::Body>, http::uri::InvalidUri>[0m[0m`[0m

[0m[1m[38;5;9merror[E0277][0m[0m[1m: the trait bound `(): futures::future::Future` is not satisfied[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:32:24[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m32[0m[0m [0m[0m[1m[38;5;12m| [0m[0m  [0m[0m        hyper::rt::run(hyper::rt::lazy(|| {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m [0m[0m[1m[38;5;9m________________________^[0m
[0m[1m[38;5;12m33[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m            let client = hyper::Client::builder()[0m
[0m[1m[38;5;12m34[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m                                .build::<_, hyper::Body>([0m
[0m[1m[38;5;12m35[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m                                    HttpsConnector::new(4).unwrap()[0m
[0m[1m[38;5;12m...[0m[0m  [0m[0m[1m[38;5;9m|[0m
[0m[1m[38;5;12m59[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m            }[0m
[0m[1m[38;5;12m60[0m[0m [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|[0m[0m [0m[0m        }));[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m[1m[38;5;9m|__________^[0m[0m [0m[0m[1m[38;5;9mthe trait `futures::future::Future` is not implemented for `()`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required because of the requirements on the impl of `futures::future::IntoFuture` for `()`[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required by `futures::future::lazy::Lazy`[0m

[0m[1m[38;5;9merror[E0277][0m[0m[1m: the trait bound `(): futures::future::Future` is not satisfied[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:32:9[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m32[0m[0m [0m[0m[1m[38;5;12m| [0m[0m        hyper::rt::run(hyper::rt::lazy(|| {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m        [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mthe trait `futures::future::Future` is not implemented for `()`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required because of the requirements on the impl of `futures::future::IntoFuture` for `()`[0m
[0m   [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: required by `hyper::rt::run`[0m

[0m[1m[38;5;9merror[E0063][0m[0m[1m: missing field `res_receiver` in initializer of `backend_connection::BackendConnection`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:62:9[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m62[0m[0m [0m[0m[1m[38;5;12m| [0m[0m        BackendConnection {[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m        [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mmissing `res_receiver`[0m

[0m[1m[38;5;9merror[E0609][0m[0m[1m: no field `request_sender` on type `&backend_connection::BackendConnection`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/backend_connection.rs:69:14[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m69[0m[0m [0m[0m[1m[38;5;12m| [0m[0m        self.request_sender.send([0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m             [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^[0m

[0m[1m[38;5;9merror[0m[0m[1m: aborting due to 7 previous errors[0m

[0m[1mSome errors have detailed explanations: E0063, E0277, E0308, E0599, E0609.[0m
[0m[1mFor more information about an error, try `rustc --explain E0063`.[0m
[0m[0m[1m[31merror:[0m Could not compile `game-server`.

To learn more, run the command again with --verbose.
build failed!
